workloads/lidarr/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: slskd
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: slskd
  ports:
    - name: http
      port: 5030
      targetPort: 5030
